# Physics-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEVLOG.md  LICENSE  a.cpp  build_and_run.ps1  compile_shaders.ps1  vcpkg.json
.github/workflows/: release.yml
Physics-Engine-Package/: run.bat
Physics-Engine-Package/Shaders/: fragment.glsl  vertex.glsl
Shaders/: fragment.glsl  model_fragment.glsl  model_vertex.glsl  vertex.glsl
glad/include/glad/: glad.h
glad/src/: glad.c
models/: Untitled.glb  Untitled.gltf
src/: camera.h  main.cpp  main_old.cpp  main_opengl.cpp  main_vulkan.cpp  shader.h  shader_old.h
src/components/: transform.cpp  transform.h
src/core/: engine.cpp  engine.h  time_manager.cpp  time_manager.h
src/scene/: entity.cpp  entity.h  scene.cpp  scene.h
src/systems/: input_system.cpp  input_system.h  render_system.cpp  render_system.h  window_system.cpp  window_system.h
src/utils/: model_loader.cpp  model_loader.h
